Bug 1700309 - Retry DNS query when RESOLVE_IP_HINT is set r=necko-reviewers,dragana

Differential Revision: https://phabricator.services.mozilla.com/D109819